cluster/cv/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cv
  namespace: cv
  annotations: 
    cert-manager.io/cluster-issuer: production-cluster-issuer 
spec:
  ingressClassName: nginx
  rules:
  - host: cv.mhasnain.dev
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: cv
            port:
              number: 80
  tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
  - hosts:
    - cv.mhasnain.dev
    secretName: cv-cert
